--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
     </div>
     <h2>Faça seu cadastro</h2>
     <fieldset>
-        <form method="post" action="login.html">
+        <form method="post" action="index.html">
             <input type="text" size="50" name="nome" placeholder="Nome" maxlength="50" required>
             <br>
             <br>
