--- a/calculadora.html
+++ b/calculadora.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <button class="botao"><a href="login.html">Voltar</a></button>
+    <button class="botao"><a href="index.html">Voltar</a></button>
     <div class="sobre"><a href="sobre.html"><img src="img/64031.png" alt="Continuar" width="50" height="50"></a></div>
      <!-- Plugin VLibras -->
      <div vw class="enabled">
